--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -248,7 +248,7 @@ header, footer, nav, section, div {
 	height: 14px;
 	display: table-cell;
 	overflow: hidden;
-	color: rgb(187, 187, 187);
+	color: rgb(97, 85, 85);
 	/*background: rgb(115, 216, 163);*/
 	position: relative;
 	padding-bottom: 2px;
@@ -308,6 +308,8 @@ header, footer, nav, section, div {
 		padding: 4px 0;
 		font-size: 2em;
         text-align:center;
+		margin-left:100px;
+		position:relative;
 	}
 
 	.display-events-overview-container .list-item-title {
@@ -355,7 +357,6 @@ header, footer, nav, section, div {
 
 #calendarMenuHeader {
 	display: table-caption;
-	color: white;
 	text-align: center;
 }
 
@@ -449,7 +450,8 @@ header, footer, nav, section, div {
 
 .weekday-container {
 	display: table-row;
-	color: rgb(145, 145, 145);
+	color: gray;
+	text-shadow:0px 1px 1px rgb(255, 255, 255);
 }
 
 .weekday {
@@ -459,7 +461,7 @@ header, footer, nav, section, div {
 
 
 	.weekday:nth-child(7) {
-		color: rgb(255, 124, 124);
+		color: rgb(255, 45, 45);
 	}
 
 .calendar-cell {
@@ -476,6 +478,7 @@ header, footer, nav, section, div {
 
 .current-weekday {
 	color: black;
+	font-weight:bold;
 }
 
 .current-month-cell .cell-span-container {
@@ -488,21 +491,20 @@ header, footer, nav, section, div {
 }
 
 	.current-month-cell .cell-span-container .cell-month-name-span {
-		padding-left: 10px !important;
 		color: rgb(184, 184, 184);
 	}
 
 .today-cell .cell-span-container {
 	position: relative;
 	top: 56px;
-	background: rgb(232, 255, 215);
+	background: rgb(154, 149, 134);
 	height: 24px;
 	z-index: 98;
 	border-top: 1px solid white;
 }
 
 	.today-cell .cell-span-container .day {
-		color: rgb(151, 159, 21);
+		color: white;
 	}
 
 .other-month-cell .cell-span-container {
@@ -514,10 +516,6 @@ header, footer, nav, section, div {
 	color: white;
 	background: #D3CCB8;
 }
-
-	.other-month-cell .cell-span-container .cell-month-name-span {
-		padding-left: 20px !important;
-	}
 
 .events-menu-container {
 	display: inline-block;
@@ -574,7 +572,7 @@ header, footer, nav, section, div {
 	/*background: #EDE9D9 !important;
 	border: 2px solid rgb(199, 192, 174) !important;*/
 	background: #FFFFFF !important;
-	border: 2px solid rgb(188, 188, 188) !important;
+	border: 2px solid rgb(154, 149, 134) !important;
 }
 
 	.today-cell .event-rectangle {
@@ -948,7 +946,7 @@ background:rgb(115, 233, 162);
 		cursor: pointer;
 	}
 
-.event-hover-container {
+#eventHoverContainer {
 	display: none;
 	position: absolute;
 	background: url(../Images/point.png) repeat scroll 0 0 transparent;
@@ -1359,6 +1357,7 @@ background:rgb(115, 233, 162);
 	float: right;
 	padding: 0 10px;
 	color: rgb(255, 251, 239);
+	border:1px solid #EDE9D9;
 }
 
 #calendarDayDetailsTable {
@@ -1406,8 +1405,9 @@ background:rgb(115, 233, 162);
 
 
 .month-name-calendar {
-	color: rgb(195, 187, 177);
+	color: gray;
 	text-decoration: underline;
+	text-shadow:0px 1px 1px rgb(255, 255, 255);
 }
 
 #lobbyEventsDisplaySection {
@@ -1708,6 +1708,7 @@ legend {
 -----------------------------------------------------------*/
 .field-validation-error {
 	color: #f00;
+	font-size:20px;
 }
 
 .field-validation-valid {
@@ -1715,7 +1716,7 @@ legend {
 }
 
 .input-validation-error {
-	border: 1px solid #f00 !important;
+	border: 2px solid #f00 !important;
 	background-color: #fee !important;
 }
 
@@ -1767,11 +1768,13 @@ legend {
 }
 
 .event-block {
-	color: rgb(250, 250, 250);
+	color: rgb(126, 116, 101);
 	line-height: 1;
-	background: #D7D0B8;
-	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
-	/*border: 2px solid rgb(189, 180, 153);*/
+	/*background: #D7D0B8;*/
+	background:#E4DECA;
+	/*box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;*/
+	border: 2px solid rgb(189, 180, 153);
+	border-top:none;
 }
 
 .event-block-info-body {
@@ -1894,8 +1897,6 @@ legend {
 .details-event-block {
 	color: rgb(250, 250, 250);
 	line-height: 1;
-	background: #D7D0B8;
-	box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;
 }
 
 .details-event-block-body {
@@ -1921,7 +1922,7 @@ legend {
 
 .event-block-info-name {
 	font-size: 2em;
-	color: white;
+	color: #545252;
 }
 
 .event-block-info-description {
@@ -1943,7 +1944,7 @@ legend {
 
 .details-event-block-info-time {
 	font-size: 2.2em;
-	color: rgb(121, 119, 110);
+	color: #545252;
 }
 
 .event-block-info-date {
@@ -2013,9 +2014,10 @@ legend {
 
 .event-block-info-addedby {
 	text-align: right;
+		color: gray;
 }
 
 .details-event-block-info-addedby {
 	text-align: right;
-	color: rgb(250, 250, 250);
+	color: gray;
 }
