--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -58,6 +58,8 @@
 	</ul>
 </div>
 
+@* Lib  *@
+
 @Scripts.Render( "~/bundles/jquery" )
 @Scripts.Render( "~/bundles/jqueryval" )
 @Scripts.Render( "~/bundles/modernizr" )
@@ -73,6 +75,8 @@
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
+@* Models *@
+
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
 <script src="~/Scripts/JSModels/KKNoteModel.js"></script>
@@ -82,11 +86,19 @@
 <script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
 <script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
+@* Utils *@
+
 <script src="~/Scripts/JSUtils/EventColorHelper.js"></script>
 <script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
 <script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
+<script src="~/Scripts/JSUtils/SimpleFilt.js"></script>
+
+@* Managers *@
+
 <script src="~/Scripts/JSManagers/EventManager.js"></script>
 <script src="~/Scripts/JSManagers/NoteManager.js"></script>
+
+@* Program *@
 
 <script src="~/Scripts/Program.js"></script>
 
@@ -99,14 +111,14 @@
 		//Start of application
 		//////////////////////////
 		var indexViewModel = @Html.Raw( Json.Encode( @Model.IndexViewModel ) );
-		var userName = '@User.Identity.Name';
+		var userName = '@User.Identity.Name.ToLower()';
 
 		var PROGRAM = Program;
 
 		//used in jquery.superslides to initialize Masonry grid plugin when superslides fades in.
 		window.initializeEventGrid = PROGRAM.initializeEventGrid;	
 
-		PROGRAM.initializeJQueryExtentionMethods();
+		PROGRAM.initializeJQueryExtentionMethods(SIMPLE_FILT());
 		PROGRAM.initializeAndStartSpinner();
 		PROGRAM.initialize(indexViewModel, userName);
 
