--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/JSUnitTests.cshtml
@@ -1,25 +1,48 @@
-﻿@Scripts.Render( "~/bundles/jquery" )
-@Scripts.Render( "~/bundles/jqueryval" )
-@Scripts.Render( "~/bundles/jqueryui" )
-@Scripts.Render( "~/bundles/modernizr" )
-@Scripts.Render( "~/bundles/knockout" )
+﻿@* Lib  *@
+
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/jqueryval")
+@Scripts.Render("~/bundles/modernizr")
+@Scripts.Render("~/bundles/knockout")
 
 <script src="~/Scripts/Lib/raphael-min.js"></script>
+
 <script src="~/Scripts/Lib/SpinJS/spin.min.js"></script>
+<script src="~/Scripts/Lib/Masonry/masonry-docs.min.js"></script>
 <script src="~/Scripts/KnockoutCustomBindings/KOCustomBindings.js"></script>
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
+@* Models *@
+
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
+<script src="~/Scripts/JSModels/KKNoteModel.js"></script>
+<script src="~/Scripts/JSModels/KKNoteModelObservable.js"></script>
 <script src="~/Scripts/JSModels/KKDateModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventDateModel.js"></script>
+<script src="~/Scripts/JSModels/KKEventDateModelObservable.js"></script>
+<script src="~/Scripts/JSViewModels/AppViewModel.js"></script>
 
-<script src="~/Scripts/JSViewModels/appViewModel.js"></script>
-<script src="~/Scripts/Helpers/EventColorHelper.js"></script>
-<script src="~/Scripts/Helpers/TreeBuilder.js"></script>
+@* Utils *@
+
+<script src="~/Scripts/JSUtils/EventColorHelper.js"></script>
+<script src="~/Scripts/JSUtils/TreeBuilder.js"></script>
+<script src="~/Scripts/JSUtils/WebApiCaller.js"></script>
+<script src="~/Scripts/JSUtils/SimpleFilt.js"></script>
+
+@* Managers *@
+
+<script src="~/Scripts/JSManagers/EventManager.js"></script>
+<script src="~/Scripts/JSManagers/NoteManager.js"></script>
+
+@* Program *@
+
+<script src="~/Scripts/Program.js"></script>
+
+@* Jasmine *@
 
 <link href="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.css" rel="stylesheet" />
 <script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/jasmine.js"></script>
@@ -27,8 +50,13 @@
 <script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/boot.js"></script>
 
 <!-- include spec files here... -->
-<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/spec/TreeBuilderSpec.js"></script>
+<script src="~/Scripts/JSUnitTests/Jasmine-2.1.3/spec/SimpleFiltSpec.js"></script>
 
+<script type="text/javascript">
+
+    $("#layoutLogo").hide();
+
+</script>
 
 
 
