fixed displaying selected menu items in details page

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -19,7 +19,7 @@
 		</div>
 
 		<div style="float:right;" class="events-menu-container">
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item inne-border-tab"></div>
 				<div class="menu-item" data-eventkind="7">
 					<span>Inne</span>
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item lekcje-border-tab"></div>
 				<div class="menu-item" data-eventkind="2">
 					<span>Lekcje</span>
@@ -43,7 +43,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item wydarzenia-border-tab"></div>
 				<div class="menu-item" data-eventkind="1">
 					<span>Wydarzenia</span>
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item spotkania-border-tab"></div>
 				<div class="menu-item" data-eventkind="6">
 					<span>Spotkania</span>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item zajecia-border-tab"></div>
 				<div class="menu-item" data-eventkind="3">
 					<span>Zajęcia</span>
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item szkolenia-border-tab"></div>
 				<div class="menu-item" data-eventkind="4">
 					<span>Szkolenia</span>
@@ -89,7 +89,7 @@
 				</div>
 			</div>
 
-			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu.selectedEventKindValues ) }">
+			<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.detailsPageJournalMenu.getCurrentSelectedEventsProp(), $root.detailsPageJournalMenu ) }">
 				<div class="border-item kursy-border-tab"></div>
 				<div class="menu-item" data-eventkind="5">
 					<span>Kursy</span>
