--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -7,7 +7,7 @@
 		<div style="text-align:center;">
 			Nadchodzące wydarzenia
 		</div>
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 7, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item inne-border-tab"></div>
 			<div class="menu-item" data-eventkind="7">
 				<span>Inne</span>
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 2, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item lekcje-border-tab"></div>
 			<div class="menu-item" data-eventkind="2">
 				<span>Lekcje</span>
@@ -29,7 +29,7 @@
 		</div>
 
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 1, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item wydarzenia-border-tab"></div>
 			<div class="menu-item" data-eventkind="1">
 				<span>Wydarzenia</span>
@@ -39,7 +39,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 6, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item spotkania-border-tab"></div>
 			<div class="menu-item" data-eventkind="6">
 				<span>Spotkania</span>
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 3, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item zajecia-border-tab"></div>
 			<div class="menu-item" data-eventkind="3">
 				<span>Zajęcia</span>
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 4, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item szkolenia-border-tab"></div>
 			<div class="menu-item" data-eventkind="4">
 				<span>Szkolenia</span>
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu.selectedEventKindValues ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, 5, $root.lobbyPagePublicEventListMenu.getCurrentSelectedEventsProp(), $root.PublicEventListMenu ) }">
 			<div class="border-item kursy-border-tab"></div>
 			<div class="menu-item" data-eventkind="5">
 				<span>Kursy</span>
