--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -307,9 +307,9 @@ header, footer, nav, section, div {
 		color: #555653;
 		padding: 4px 0;
 		font-size: 2em;
-        text-align:center;
-		margin-left:100px;
-		position:relative;
+		text-align: center;
+		margin-left: 100px;
+		position: relative;
 	}
 
 	.display-events-overview-container .list-item-title {
@@ -451,7 +451,7 @@ header, footer, nav, section, div {
 .weekday-container {
 	display: table-row;
 	color: gray;
-	text-shadow:0px 1px 1px rgb(255, 255, 255);
+	text-shadow: 0px 1px 1px rgb(255, 255, 255);
 }
 
 .weekday {
@@ -478,7 +478,7 @@ header, footer, nav, section, div {
 
 .current-weekday {
 	color: black;
-	font-weight:bold;
+	font-weight: bold;
 }
 
 .current-month-cell .cell-span-container {
@@ -800,8 +800,8 @@ header, footer, nav, section, div {
 
 .display-events-count {
 	padding-right: 10px;
-	position:absolute;
-    right:0;
+	position: absolute;
+	right: 0;
 }
 
 .display-events-overview-body {
@@ -1125,7 +1125,7 @@ background:rgb(115, 233, 162);
 
 .note-content {
 	overflow: hidden;
-	border-bottom: 1px solid rgb(237, 233, 217);
+	border-bottom: 1px solid rgb(253, 252, 250);
 	list-style-position: inside;
 	clear: both;
 }
@@ -1321,9 +1321,9 @@ background:rgb(115, 233, 162);
 
 .notes-shadow-box {
 	position: relative;
-	background: rgb(250, 250, 250);
+	background: rgb(245, 242, 230);
 	border-radius: 4px;
-	padding: 2em 1.5em;
+	border: 2px solid #FDFCFA;
 	color: rgba(0,0,0, .8);
 }
 
@@ -1357,7 +1357,7 @@ background:rgb(115, 233, 162);
 	float: right;
 	padding: 0 10px;
 	color: rgb(255, 251, 239);
-	border:1px solid #EDE9D9;
+	border: 1px solid #EDE9D9;
 }
 
 #calendarDayDetailsTable {
@@ -1370,12 +1370,10 @@ background:rgb(115, 233, 162);
 	#calendarDayDetailsTable .table-details-head {
 		overflow: hidden;
 		text-align: left;
-		color: rgb(226, 219, 203);
+		color: rgb(99, 96, 90);
 		padding: 10px;
 		padding-left: 6px;
 		font-size: 18px;
-		border: 2px solid #484848;
-		background: #6C665B;
 	}
 
 		#calendarDayDetailsTable .table-details-head div {
@@ -1384,12 +1382,10 @@ background:rgb(115, 233, 162);
 		}
 
 	#calendarDayDetailsTable .table-details-body {
-		background: rgb(151, 148, 134);
+		background: rgb(162, 156, 143);
 		padding-top: 4px;
 		padding-bottom: 4px;
 		padding-left: 1px;
-		border: 3px solid rgb(122, 115, 103);
-		border-bottom: 3px solid rgb(108, 102, 91);
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -1407,7 +1403,7 @@ background:rgb(115, 233, 162);
 .month-name-calendar {
 	color: gray;
 	text-decoration: underline;
-	text-shadow:0px 1px 1px rgb(255, 255, 255);
+	text-shadow: 0px 1px 1px rgb(255, 255, 255);
 }
 
 #lobbyEventsDisplaySection {
@@ -1443,17 +1439,16 @@ background:rgb(115, 233, 162);
 
 .details-hour-line {
 	position: absolute;
-	background: rgb(172, 170, 159);
+	background: rgb(177, 173, 159);
 	height: 100%;
 	width: 1px;
 }
 
 .details-hour-line-21 {
 	position: absolute;
-	background: rgb(187, 180, 164);
+	background: rgb(177, 173, 159);
 	height: 100%;
 	width: 1px;
-	right: 0px;
 }
 
 #logoutForm {
@@ -1708,7 +1703,7 @@ legend {
 -----------------------------------------------------------*/
 .field-validation-error {
 	color: #f00;
-	font-size:20px;
+	font-size: 20px;
 }
 
 .field-validation-valid {
@@ -1771,10 +1766,10 @@ legend {
 	color: rgb(126, 116, 101);
 	line-height: 1;
 	/*background: #D7D0B8;*/
-	background:#E4DECA;
+	background: #E4DECA;
 	/*box-shadow: rgb(169, 162, 139) 2px 2px 10px -1px inset;*/
 	border: 2px solid rgb(189, 180, 153);
-	border-top:none;
+	border-top: none;
 }
 
 .event-block-info-body {
@@ -1897,11 +1892,13 @@ legend {
 .details-event-block {
 	color: rgb(250, 250, 250);
 	line-height: 1;
+	border: 2px solid #BFBBA7;
+	background: rgb(228, 223, 202);
 }
 
 .details-event-block-body {
 	color: rgb(126, 116, 101);
-	border-top: 2px solid #9D9784;
+	border-top: 2px solid #FDFDFD;
 	padding: 10px;
 }
 
@@ -2014,7 +2011,7 @@ legend {
 
 .event-block-info-addedby {
 	text-align: right;
-		color: gray;
+	color: gray;
 }
 
 .details-event-block-info-addedby {
