--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -128,7 +128,7 @@
 	</span>
 </div>
 <section id="calendarDayDetailsContainer">
-	<div style="text-align: center; font-size: 2em; color: #484848; padding: 10px;">
+	<div style="font-size: 2em; color: #484848; padding: 10px; padding-left: 40px;">
 		<span data-bind="text: $root.detailsPageDisplayDate.getDayName()" style="font-size: .8em; color: #B1AB98;"></span>
 		<span data-bind="text: $root.detailsPageDisplayDate.day()"></span>
 		<span data-bind="text: $root.detailsPageDisplayDate.getMonthName()"></span>
@@ -152,7 +152,6 @@
 			<div>20<span class="small-minutes">00</span></div>
 			<div style="position: absolute; right: 30px; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
 		</div>
-		<div style="width: 100%; height: 1px; background: #A29C90;"></div>
 		<div class="table-details-body">
 			<div class="details-day-cell hour-cell-7">
 				<div class="details-hour-line"></div>
