--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsManageOwnPublicEventsMenuItem.cshtml
@@ -35,7 +35,7 @@
 	</div>
 	<div data-bind="foreach: $root.detailsPageJournalMenu.menuItems.manageOwnPublicEvents.selectedEvents.upcoming" style="padding-left: 100px;padding-right:6px;">
 		<div class="display-events-overview-item">
-			<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }">
+			<div data-bind="click: function () { $root.expandEventOverviewItemOnClick( $element ) }" style="border-top-width: 2px; border-top-style: solid; border-top-color: rgb(253, 252, 250);">
 				<div class="list-item-star">
 					<img src="~/Images/Icons/star.png" alt="public event star" />
 				</div>
