--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -12,7 +12,7 @@ body {
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	background: rgb(237, 233, 217);
-	/*background:#F0E8CB;*/
+	/*rgb(237, 233, 217)*/
 }
 
 header, footer, nav, section, div {
@@ -51,19 +51,28 @@ header, footer, nav, section, div {
 	text-decoration: underline;
 }
 
+.lobby-header {
+	background: white;
+	height: 20px;
+}
+
 #lobbyNavContainer {
 	font-family: Raleway-Regular;
-	color: gray;
+	color: #CCCACA;
 	text-align: center;
+	font-size: 1.2em;
+	/* border-top: 2px solid #5F5F5F; */
+	padding: 20px;
+	background: #9E9A89;
 }
 
 	#lobbyNavContainer a {
 		text-decoration: none;
-		color: black;
+		color: white;
 	}
 
 		#lobbyNavContainer a:visited {
-			color: black;
+			color: white;
 		}
 
 		#lobbyNavContainer a:active {
@@ -83,15 +92,25 @@ header, footer, nav, section, div {
 #lobbyQuoteContainer {
 	font-family: Raleway-Regular;
 	font-size: 2em;
-	color: white;
+	color: #3E3B3B;
 	line-height: 1;
+	border-bottom: 2px solid #7D7C75;
 	text-align: center;
-	text-shadow: 0px 1px 1px rgb(207, 200, 176);
+	/* text-shadow: 0px 1px 1px #ABABAB; */
+	margin: 0 auto;
+	/* width: 60%; */
+	padding-top: 20px;
+	height: 200px;
+	margin-top: 208px;
+	background: rgb(217, 213, 196);
+	background: #9E9A89;
+/*#3A3A3A*/
 }
 
 #lobbyQuoteAndNavSection {
-	margin-top: 160px;
+	margin-top: 80px;
 	margin-bottom: 150px;
+	height: 500px;
 }
 
 .dotted-page-overlay {
@@ -101,7 +120,6 @@ header, footer, nav, section, div {
 	z-index: 100;
 	position: absolute;
 	display: none;
-	font-family: h;
 }
 
 /*calendar css*/
@@ -166,17 +184,18 @@ header, footer, nav, section, div {
 }
 
 #lobbyLogo {
+	top: 20px;
 	background-image: url(../Images/Logo/kkLogo.png);
 	position: absolute !important;
-	background-repeat: no-repeat;
-	height: 140px;
-	width: 540px;
+	height: 110px;
+	width: 510px;
 }
 
 #layoutLogo {
 	background-image: url(../Images/Logo/kkLogo.png);
 	position: absolute !important;
 	background-repeat: no-repeat;
+	top:20px;
 	height: 140px;
 	width: 540px;
 }
@@ -339,6 +358,7 @@ header, footer, nav, section, div {
 
 .display-events-overview-item {
 	background: rgb(247, 244, 235);
+	border-bottom: 2px solid rgb(253, 252, 250);
 }
 
 .hour {
@@ -539,9 +559,9 @@ header, footer, nav, section, div {
 #loginSpanLink {
 	font-size: 1.4em;
 	padding: 10px;
-	border: 2px solid #CBC7B5;
 	border-right: 0;
 	border-radius: 3px;
+	color: gray;
 }
 
 #detailsPanel {
@@ -554,10 +574,12 @@ header, footer, nav, section, div {
 
 .login-bar-container {
 	text-align: right;
-	color: gray;
+	color: #D2BFBF;
 	position: relative;
-	top: 80px;
-	margin-right: 40px;
+	top: 143px;
+	border-bottom: 2px solid #7D7C75;
+	background: #E4E0CF;
+	padding: 20px;
 }
 
 .lobby-loggedIn-bar {
@@ -641,17 +663,17 @@ header, footer, nav, section, div {
 	/*background-position: right;*/
 	/*border-right: 1px solid rgb(212, 202, 168);
 	background: rgb(223, 215, 188);*/
-	background: #D7D0B8;
+	/*background: #D7D0B8;*/
+	background: #DCD8C6;
 	border-right: 1px solid #EFEEEC;
 }
 
 #rightSideLobby {
-	/*background-image: url("../Images/BackgroundParts/RightSidePixelDark.png");
-	background-repeat: repeat-y;*/
 	/* background-position: left; */
 	right: 0;
 	border-left: 1px solid #efeeec;
 	background: #D7D0B8;
+	/* background: #6F6C5D; */
 	z-index: 3;
 }
 
@@ -665,7 +687,8 @@ header, footer, nav, section, div {
 	border-left: 1px solid #EFEEEC;
 	position: absolute;
 	width: 10%;
-	background: #D7D0B8;
+	/*background: #D7D0B8;*/
+	background: #DCD8C6;
 }
 
 #mainContainer {
@@ -1007,11 +1030,9 @@ background:rgb(115, 233, 162);
 
 .title-header {
 	font-size: 2em;
-	color: rgb(167, 164, 154);
+	color: rgb(93, 92, 88);
 	padding: 10px;
-	background: rgb(250, 248, 240);
-	border-bottom: 1px solid white;
-	border-top: 1px solid #D7D0B8;
+	border-bottom: 2px solid #DCD8C6;
 }
 
 .selected-content-container {
@@ -1043,14 +1064,19 @@ background:rgb(115, 233, 162);
 }
 
 #addPrivateEventBtn {
-	display: block;
-	margin-left: 10px;
+	float: right;
+	background: #DCD8C6;
+	color: white;
+	padding: 20px;
 	width: 200px;
 }
 
 #addPublicEventBtn {
-	margin-left: 10px;
-	margin-top: 8px;
+	padding: 20px;
+	color: white;
+	background: #DCD8C6;
+	width: 197px;
+	float: right;
 }
 
 #lobbyTableOfEventsSection {
