--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -9,17 +9,12 @@
 
 	<link rel="icon" href="@Url.Content( "~/Images/Ico/favicon.ico" )"/>
 	@Styles.Render( "~/Content/css" )
-
+	<link href="~/Content/Dzieou.css" rel="stylesheet" />
 </head>
 <body>
-	<header>
-	</header>
-
 	<div id="mainContainer">
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
-		</div>
-		<div id="layoutLogo">
 		</div>
 
 		@RenderBody()
